# cosmos-reason1

./: .gitignore  .pre-commit-config-base.yaml  .pre-commit-config.yaml  ATTRIBUTIONS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  POST_TRAIN_README.md  README.md  conda.yaml  data  environment.yml  justfile  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: pre-commit.yml
app/: cosmos_reason1_config.json  gradio_app.py  reason1p1_gradio.py  reason1p1_gradio_multi.py  setup_gradio.sh  setup_reason1p1_gradio.sh
assets/: sample.html
assets/examples_video_critic/: generation_0_formatted.md  generation_0_raw_output.txt  generation_1_formatted.md  generation_1_raw_output.txt  generation_2_formatted.md  generation_2_raw_output.txt  generation_3_formatted.md
configs/: export_schemas.py  generation_config.json  sampling_params.yaml  vision_config.json  vision_config.yaml
configs/cosmos-reason1/: cosmos-reason1-7b-fsdp2-sft.toml  cosmos-reason1-7b-fsdp4-sft.toml  cosmos-reason1-7b-p-fsdp1-tp2-r-tp1-pp2-grpo.toml  cosmos-reason1-7b-p-fsdp1-tp2-r-tp2-pp1-grpo-fp8.toml  cosmos-reason1-7b-p-fsdp1-tp2-r-tp2-pp1-grpo.toml  cosmos-reason1-7b-p-fsdp2-r-tp2-grpo.toml  cosmos-reason1-7b-p-fsdp2-tp2-r-tp2-pp1-grpo.toml  cosmos-reason1-7b-p-fsdp2-tp2-r-tp4-pp1-grpo-validation.toml  cosmos-reason1-7b-p-fsdp2-tp2-r-tp4-pp1-grpo.toml  cosmos-reason1-7b-p-fsdp4-tp1-r-tp2-pp1-grpo.toml  cosmos-reason1-7b-pp2-tp2-sft.toml  cosmos-reason1-7b-tp2-fsdp-sft.toml  cosmos-reason1-7b-tp2-fsdp?-sft.toml  cosmos-reason1-7b-tp2-sft-profile.toml  cosmos-reason1-7b-tp2-sft.toml  cosmos-reason1-7b-tp4-sft.toml  cosmos-reason1-7b-vlad-bench-sft.toml
configs/qwen2-5/: qwen2-5-32b-gsm8k-grpo-fp8.toml  qwen2-5-32b-gsm8k-grpo.toml  qwen2-5-32b-p-fsdp2-tp4-r-tp4-pp1-dapo.toml  qwen2-5-32b-p-fsdp2-tp4-r-tp4-pp1-grpo-gsm8k.toml  qwen2-5-32b-p-fsdp2-tp4-r-tp4-pp1-grpo-math.toml  qwen2-5-32b-p-fsdp2-tp4-r-tp4-pp1-grpo-validation.toml  qwen2-5-32b-p-fsdp2-tp4-r-tp4-pp1-grpo.toml  qwen2-5-32b-tp2-fsdp4-sft.toml  qwen2-5-32b-tp8-sft.toml  qwen2-5-3b-p-fsdp1-tp1-r-tp1-pp1-grpo-aipo.toml  qwen2-5-3b-p-fsdp1-tp1-r-tp1-pp1-grpo.toml  qwen2-5-3b-p-fsdp1-tp2-r-n_init_replica-3-tp2-pp1-grpo.toml  qwen2-5-3b-p-fsdp1-tp2-r-tp2-pp1-grpo-profile.toml  qwen2-5-3b-p-fsdp1-tp2-r-tp2-pp1-grpo.toml  qwen2-5-3b-tp1-sft.toml  qwen2-5-3b-tp2-fsdp-sft.toml  qwen2-5-3b-tp2-fsdp?-sft.toml  qwen2-5-7b-p-fsdp1-tp2-r-tp2-pp1-grpo-validation.toml  qwen2-5-7b-p-fsdp1-tp2-r-tp2-pp1-grpo-vllm-flashinfer.toml  qwen2-5-7b-p-fsdp1-tp2-r-tp2-pp1-grpo.toml  qwen2-5-7b-p-fsdp2-tp2-r-tp2-pp1-grpo-fp8.toml  qwen2-5-7b-p-fsdp2-tp2-r-tp2-pp1-grpo.toml  qwen2-5-7b-p-fsdp2-tp2-r-tp4-pp1-grpo.toml  qwen2-5-7b-p-pp1-fsdp1-tp2-r-tp1-pp2-grpo.toml  qwen2-5-7b-p-pp2-fsdp1-tp1-r-tp2-pp2-grpo.toml  qwen2-5-7b-p-pp2-tp2-r-tp2-pp1-grpo.toml  qwen2-5-7b-p-pp2-tp2-r-tp2-pp2-grpo.toml  qwen2-5-7b-p-tp4-r-tp2-pp1-grpo.toml  qwen2-5-7b-pp2-tp2-sft.toml
configs/qwen3/: qwen3-32b-p-fsdp1-tp8-r-tp4-pp1-grpo.toml  qwen3-32b-tp8-sft.toml  qwen3-8b-p-fsdp1-tp4-r-tp4-pp1-grpo-fp8.toml
configs/qwen3-moe/: qwen3-moe-30b-fsdp2-tp4-sft.toml  qwen3-moe-30b-p-tp4-r-tp2-grpo-fp8.toml  qwen3-moe-30b-p-tp4-r-tp2-grpo.toml  qwen3-moe-30b-tp4-sft.toml
configs/schemas/: sampling_params.json  vision_config.json
cosmos_reason1/: _cpp.pyi
cosmos_reason1/cli/: algo.py  cli.py  nccl.py  profiler.py  replica.py  utils.py
cosmos_reason1/comm/: base.py
cosmos_reason1_utils/: README.md  pyproject.toml
cosmos_reason1_utils/src/cosmos_reason1_utils/: README.md  text.py  text_test.py  vision.py  vision_test.py
cosmos_reason1_utils/src/cosmos_reason1_utils/script/: __init__.py  _test.py
docs/: CLI.md  DataDownload.md  ElasticScalingAndFaultTolerance.md  FP8.md  FolderStructure.md  PipelineParallelismDynamicShape.md  Profiler.md  RawDataDownload.md  UserGuide.md
examples/: video_critic.md  video_critic.py
examples/cosmos_reason1_benchmark/: README.md  pyproject.toml
examples/cosmos_reason1_benchmark/tools/eval/: calculate_accuracy.py  download_hf_data.py  inference.py  process_raw_data.py
examples/cosmos_reason1_sft_dataset/: README.md  justfile  pyproject.toml
examples/cosmos_reason1_sft_dataset/configs/: cosmos-reason1-7b-fsdp2-sft.toml  cosmos-reason1-7b-fsdp4-sft.toml  cosmos-reason1-7b-fsdp8-sft.toml  cosmos-reason1-7b-p-fsdp2-r-tp2-grpo.toml  cosmos-reason1-7b-p-fsdp4-r-tp4-grpo-validation.toml  cosmos-reason1-7b-p-fsdp8-r-tp2-grpo.toml
examples/cosmos_reason1_sft_dataset/tools/dataset/: cosmos_sft.py
examples/cosmos_reason1_sft_dataset/tools/eval/: evaluate.py  inference.py
examples/cosmos_reason1_sft_dataset/tools/eval/configs/: all_datasets.yaml  robovqa.yaml
examples/cosmos_reason1_sft_dataset/tools/eval/utils/: input.py  output.py
examples/inference/: inference.py  pyproject.toml
examples/post_training/: README.md  pyproject.toml
examples/post_training/configs/: rl.toml  sft.toml
examples/post_training/tools/dataset/: cosmos_grpo.py  cosmos_sft.py
examples/post_training_hf/: README.md  pyproject.toml
examples/post_training_hf/configs/: sft.toml
examples/post_training_hf/scripts/: download_cosmos_curate.py  download_nexar_collision_prediction.py  sft.py
prompts/: README.md  action_planning.yaml  av.yaml  caption.yaml  caption_reason.yaml  driving_analyzer.yaml  multiple_choice_questions.yaml  prompt_upsampler.yaml  question.yaml  reasoning.yaml  robot.yaml  temporal_caption_json.yaml  temporal_caption_text.yaml  temporal_localization.yaml  video_analyzer.yaml  video_critic.yaml  whole_object_annotation.yaml
schemas/: generation_config.json  vision_config.json
scripts/: export_schemas.py  inference.py  inference_sample.py  inference_vllm.py  quantize_fp8.py
tests/: launch_test_worker.py  test_cache.py  test_comm.py  test_fp8.py  test_grad_allreduce.py  test_high_availability_nccl.py  test_nccl_collectives.py  test_nccl_timeout.py  test_parallel_map.py  test_policy_to_policy.py  test_policy_to_rollout.py  test_process_flow.py
tools/: launch_all.py  launch_controller.sh  launch_replica.sh  profile_cmd.py
(+132 files in other folders)
