[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[project]
name = "cosmos-reason1-utils"
version = "0.1.0"
description = "Cosmos Reason1 Utilities"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pillow",
    "pydantic",
    "torch",
    "torchvision",
]
