[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[project]
name = "cosmos-reason1-benchmark"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "attrs",
    "datasets",
    "ffmpeg-python",
    "huggingface-hub",
    "numpy",
    "opencv-python",
    "pillow",
    "pyyaml",
    "qwen_vl_utils",
    "tensorflow_datasets",
    "torch",
    "tqdm",
    "transformers",
    "vllm",
]

[tool.uv.build-backend]
module-name = ["tools"]
module-root = ""
