[project]
name = "cosmos-reason1-sft-dataset"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = ["qwen_vl_utils", "transformers", "vllm"]

[project.optional-dependencies]
train = [
    "attrs",
    "cosmos-rl",
    "datasets",
    "tensorflow_datasets",
    "toml",
    "pillow",
    "pyyaml",
    "huggingface-hub",
    "numpy",
    "tqdm",
    "opencv-python",
    "ffmpeg-python",
    "torch",
    "wandb"
]

[dependency-groups]
build = ["torch"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
override-dependencies = ["transformers>=4.53"]

[tool.uv.sources]
cosmos-rl = { git = "https://github.com/nvidia-cosmos/cosmos-rl.git" }
