[project]
name = "cosmos-reason1-inference"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.10.1",
  "qwen-vl-utils>=0.0.11",
  "torch>=2.7.1",
  "torchcodec>=0.6.0",
  "transformers>=4.51.3",
]
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128"},
]
torchvision = [
  { index = "pytorch-cu128"},
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
