[project]
name = "cosmos-reason1-post-training-hf"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cosmos-reason1-utils",
    "cosmos-rl==0.2.6.post1.dev2+g0bb46d1", # HACK
    "datasets",
    "pydantic",
    "rich",
    "toml",
    "torch",
    "torchcodec",
    "transformers",
    "wandb",
]

[dependency-groups]
build = ["torch"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
override-dependencies = ["transformers>=4.53"]

[tool.uv.sources]
cosmos-reason1-utils = { path = "../../cosmos_reason1_utils", editable = true }
cosmos-rl = { git = "https://github.com/nvidia-cosmos/cosmos-rl.git" }
